--- a/cplusplus_notebook/1. IO流.md
+++ b/cplusplus_notebook/1. IO流.md
@@ -4,7 +4,7 @@
 
 ### 1.1.1 继承关系
 
-![image-20230705001144120](C:\Users\Luffy\AppData\Roaming\Typora\typora-user-images\image-20230705001144120.png)
+![image-20230705001144120](E:\cplusplus_study\files\image-20230705001144120.png)
 
 ### 1.1.2 流类特性
 
@@ -125,17 +125,17 @@ int main()
 }
 ```
 
-![image-20230705010328285](C:\Users\Luffy\AppData\Roaming\Typora\typora-user-images\image-20230705010328285.png)
+![image-20230705010328285](E:\cplusplus_study\files\image-20230705010328285.png)
 
 ## 1.3 cout
 
 ### 1.3.1 格式输出
 
-![image-20230705003306353](C:\Users\Luffy\AppData\Roaming\Typora\typora-user-images\image-20230705003306353.png)
+![image-20230705003306353](E:\cplusplus_study\files\image-20230705003306353.png)
 
 ### 1.3.2 成员函数
 
-![image-20230705003327584](C:\Users\Luffy\AppData\Roaming\Typora\typora-user-images\image-20230705003327584.png)
+![image-20230705003327584](E:\cplusplus_study\files\image-20230705003327584.png)
 
 ```c++
 #include <iostream>
@@ -174,7 +174,7 @@ int main()
 
 ### 1.4.2 `get`
 
-![image-20230705010703241](C:\Users\Luffy\AppData\Roaming\Typora\typora-user-images\image-20230705010703241.png)
+![image-20230705010703241](E:\cplusplus_study\files\image-20230705010703241.png)
 
 ```c++
 #include <iostream>
@@ -230,7 +230,7 @@ int main()
 
 ### 1.4.3 `getline`
 
-![image-20230705231321495](C:\Users\Luffy\AppData\Roaming\Typora\typora-user-images\image-20230705231321495.png)
+![image-20230705231321495](E:\cplusplus_study\files\image-20230705231321495.png)
 
 ```c++
 #include <iostream>
@@ -246,7 +246,7 @@ int main()
 }
 ```
 
-![image-20230706104519306](C:\Users\Luffy\AppData\Roaming\Typora\typora-user-images\image-20230706104519306.png)
+![image-20230706104519306](E:\cplusplus_study\files\image-20230706104519306.png)
 
 ```c++
 #include <iostream>
@@ -262,13 +262,13 @@ int main()
 }
 ```
 
-![image-20230706104922124](C:\Users\Luffy\AppData\Roaming\Typora\typora-user-images\image-20230706104922124.png)
+![image-20230706104922124](E:\cplusplus_study\files\image-20230706104922124.png)
 
 **小结：**在读取n-1个字符前，遇到标志位，则会读到标志位前的字符。然后越过标志位继续读取。若在读到n-1个字没有遇到标志位，则会退出。
 
 ### 1.4.4 其它函数
 
-![image-20230706105447297](C:\Users\Luffy\AppData\Roaming\Typora\typora-user-images\image-20230706105447297.png)
+![image-20230706105447297](E:\cplusplus_study\files\image-20230706105447297.png)
 
 ```c++
 #include <iostream>
@@ -286,7 +286,7 @@ int main()
 }
 ```
 
-![image-20230706110512242](C:\Users\Luffy\AppData\Roaming\Typora\typora-user-images\image-20230706110512242.png)
+![image-20230706110512242](E:\cplusplus_study\files\image-20230706110512242.png)
 
 ```c++
 #include <iostream>
@@ -304,7 +304,7 @@ int main()
 }
 ```
 
-![image-20230706110604903](C:\Users\Luffy\AppData\Roaming\Typora\typora-user-images\image-20230706110604903.png)
+![image-20230706110604903](E:\cplusplus_study\files\image-20230706110604903.png)
 
 ```c++
 #include <iostream>
@@ -324,7 +324,7 @@ int main()
 }
 ```
 
-![image-20230706110757163](C:\Users\Luffy\AppData\Roaming\Typora\typora-user-images\image-20230706110757163.png)
+![image-20230706110757163](E:\cplusplus_study\files\image-20230706110757163.png)
 
 ```c++
 #include <iostream>
@@ -345,7 +345,7 @@ int main()
 }
 ```
 
-![image-20230706111038274](C:\Users\Luffy\AppData\Roaming\Typora\typora-user-images\image-20230706111038274.png)
+![image-20230706111038274](E:\cplusplus_study\files\image-20230706111038274.png)
 
 ```c++
 #include <iostream>
@@ -366,7 +366,7 @@ int main()
 }
 ```
 
-![image-20230706111211284](C:\Users\Luffy\AppData\Roaming\Typora\typora-user-images\image-20230706111211284.png)
+![image-20230706111211284](E:\cplusplus_study\files\image-20230706111211284.png)
 
 ```c++
 #include <iostream>
@@ -389,7 +389,7 @@ int main()
 }
 ```
 
-![image-20230706111344951](C:\Users\Luffy\AppData\Roaming\Typora\typora-user-images\image-20230706111344951.png)
+![image-20230706111344951](E:\cplusplus_study\files\image-20230706111344951.png)
 
 ## 1.5 if(!fs)/while(cin)
 
@@ -475,7 +475,7 @@ int main()
 }
 ```
 
-![image-20230706114329653](C:\Users\Luffy\AppData\Roaming\Typora\typora-user-images\image-20230706114329653.png)
+![image-20230706114329653](E:\cplusplus_study\files\image-20230706114329653.png)
 
 # 2. 文件流
 
