--- a/cplusplus_notebook/1. IO流.md
+++ b/cplusplus_notebook/1. IO流.md
@@ -4,7 +4,7 @@
 
 ### 1.1.1 继承关系
 
-![image-20230705001144120](E:\cplusplus_study\files\image-20230705001144120.png)
+![image-20230705001144120](..files\image-20230705001144120.png)
 
 ### 1.1.2 流类特性
 
